[package]
name = "rainbots"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
log = "0.4.29"
autons = "0.2.0"
vexide = { version = "0.8.0", features = ["full", "default-sdk"] }

[dependencies.evian]
git = "https://github.com/vexide/evian.git"
# vexide 0.8.0 + differential models
rev = "bc300becbbbc8612de4a0d559fc66159040cd841"
